Moreno_Mauricio_#7_nombres_en_index

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 
         <section>
             <h2>Integrantes del Equipo</h2>
-            <p><strong>1.</strong> Moreno Salvador Axel Mauricio</p>
-            <p><strong>2.</strong> Aythana Amayrani Hernández Ávalos</p>
+            <p><strong>1.</strong> Moreno Salvador Axel Mauricio_ miembro 1</p>
+            <p><strong>2.</strong> Aythana Amayrani Hernández Ávalos_miembro 2</p>
         </section>
     </main>
 
